src/test/deca/syntax/valid/provided/if_if.deca
{
if ( x < 2 ) {
   if ( 2 < 3 ) {
      print("boucle imbriquée : OK") ;
      }     
      }
}    