src/test/deca/syntax/invalid/test_synt24.deca
//Resultat:
//      Erreur syntaxique : ligne 2
{
if ( 3 >){
   println("this shouldn't be printed");
}
}
